# llamacord

./: .env.example  Dockerfile  README.md  config.yml  main.py  pyproject.toml  requirements.txt
cmd/: main.py
llamacord/: main.py
