[tool.poetry]
name = "llamacord"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Apsu"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
requests = "^2.31.0"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.11.0"

[tool.poetry.scripts]
llamacord = "cmd.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
